demoapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
  name: demoapp-nginx
spec:
  rules:
  - host: oro-demoapp.example.com
    http:
      paths:
      - backend:
          service:
            name: demoapp-service
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - oro-demoapp.example.com
