demoapp.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: demoapp-mysql
spec:
  selector:
    app: demoapp-mysql
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: demoapp-mysql
  name: demoapp-mysql
spec:
  serviceName: demoapp-mysql
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: demoapp-mysql
  template:
    metadata:
      labels:
        app: demoapp-mysql
    spec:
      containers:
      - image: mtr.devops.telekom.de/mcsps/demoapp:2.0.0
        imagePullPolicy: Always
        name: demoapp
        ports:
        - containerPort: 8080
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 128Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          privileged: false
          readOnlyRootFilesystem: true
          runAsUser: 65535
          runAsGroup: 65535
        volumeMounts:
        - mountPath: /data
          name: demoapp-volume
      dnsPolicy: ClusterFirst
      hostNetwork: false
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 65535
        supplementalGroups:
        - 65535
      terminationGracePeriodSeconds: 3
      serviceAccountName: demoapp-mysql
      volumes:
      - name: createdb
        configMap:
          name: demoapp-createdb
      - name: demoapp-volume
        persistentVolumeClaim:
          claimName: demoapp-volume
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
  name: np-demoapp-mysql
spec:
  egress:
  - ports:
    - port: 3306
      protocol: TCP
  - ports:
    - port: 443
      protocol: TCP
  podSelector:
    matchLabels:
      app: demoapp-mysql
  policyTypes:
  - Egress
